src/test/ui/hr-subtype/hr-subtype.bound_co_a_vs_bound_co_b.stderr
error: fatal error triggered by #[dustc_error]
  --> $DIR/hr-subtype.rs:102:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error

